Changed game_book to dnd_book, added entries for even more books

--- a/[Si] Book Collecting/i18n/default.json
+++ b/[Si] Book Collecting/i18n/default.json
@@ -23,6 +23,9 @@
 	"Si.BC.SaltBookName": "101 Gourmand Tomato Salt Recipes",
 	"Si.BC.SaltBookDesc": "The pictures on the cover make the book itself look delicious!",
 	"Si.BC.SaltBookContent": "^^Once you've spread the spoon of cottage cheese evenly over your slice of toasted sourdough, sprinkle a few pinches of tomato salt on top and enjoy.",
+	"Si.BC.NeuralBookName": "Advanced Neural Networks",
+	"Si.BC.NeuralBookDesc": "Book description here",
+	"Si.BC.NeuralBookContent": "Book contents here",
 	"Si.BC.AdvMagBookName": "Adventurer Magazine",
 	"Si.BC.AdvMagBookDesc": "This issue looks pretty old.",
 	"Si.BC.AdvMagBookContent": "^^Interviewer: So, Gil, tell us about yourself.^Gil: Well I've been adventuring since my buddy Marlon and I used to sneak into the mines when we were kids.^Interviewer: I bet slimes gave you two a fright back then!^Gil: Ah yeah, we were fending 'em off with sticks and stones!",
@@ -53,6 +56,9 @@
 	"Si.BC.BookkeepingBookName": "Bookkeeping for Local Stores",
 	"Si.BC.BookkeepingBookDesc": "Helping you keep your business in the black!",
 	"Si.BC.BookkeepingBookContent": "^^In the modern day it is important for small business owners to use the tools they have at their disposal to keep up with their financials. Software that facilitates financial planning has become widely available for this purpose.",
+	"Si.BC.DarkroomBookName": "Build Your Own Darkroom From Scratch",
+	"Si.BC.DarkroomBookDesc": "Book description here",
+	"Si.BC.DarkroomBookContent": "Book contents here",
 	"Si.BC.CSharpBookName": "The C# Yellow Book",
 	"Si.BC.CSharpBookDesc": "Why are your fingers suddenly covered with cheeto dust?",
 	"Si.BC.CSharpBookContent": "^^The bad news about learning to program is that you get hit with a lot of ideas and concepts at around the same time when you start, and this can be confusing.",
@@ -65,15 +71,33 @@
 	"Si.BC.ChickenBookName": "Chicken Rearing for Dummies",
 	"Si.BC.ChickenBookDesc": "Huh, there's nothing about blue chickens in here.",
 	"Si.BC.ChickenBookContent": "^^When building nesting boxes for your chickens, ensure the bottom is cushioned to catch the falling eggs without breaking them. Use natural materials such as hay and chopped straw.",
+	"Si.BC.CookiesBookName": "Cookies For Every Season",
+	"Si.BC.CookiesBookDesc": "Book description here",
+	"Si.BC.CookiesBookContent": "Book contents here",
 	"Si.BC.CrystalBookName": "Crystallic Symbolism",
 	"Si.BC.CrystalBookDesc": "The meanings of various gems and minerals.",
 	"Si.BC.CrystalBookContent": "^^Aquamarines symbolize tranquility and courage. Their soothing properties can relieve stress and fear, leaving behind a sense of peace.",
+	"Si.BC.CoalminerBookName": "The Dark Blue Life: A Coal-miner's Memoir",
+	"Si.BC.CoalminerBookDesc": "Book description here",
+	"Si.BC.CoalminerBookContent": "Book contents here",
+	"Si.BC.LossBookName": "Dealing With Loss",
+	"Si.BC.LossBookDesc": "Book description here",
+	"Si.BC.LossBookContent": "Book contents here",
+	"Si.BC.KneeBookName": "Do-It-Yourself! Knee Surgery",
+	"Si.BC.KneeBookDesc": "Book description here",
+	"Si.BC.KneeBookContent": "Book contents here",
 	"Si.BC.DMGBookName": "Dungeon Master's Guide",
 	"Si.BC.DMGBookDesc": "A guide for hosting a tabletop game.",
 	"Si.BC.DMGBookContent": "^^Challenge Rating, or CR, helps you plan encounters by putting a measure on how dangerous an enemy is. As a very general rule of thumb, an average party of four level 5 adventurers should be able to handle one CR 5 enemy with some difficulty but no serious damage to the party.",
+	"Si.BC.SmallBizBookName": "The Enduring Value Of Small Business",
+	"Si.BC.SmallBizBookDesc": "Book description here",
+	"Si.BC.SmallBizBookContent": "Book contents here",
 	"Si.BC.ToolboxBookName": "The Engineer's Toolbox",
 	"Si.BC.ToolboxBookDesc": "Material properties, steam tables, and more!",
 	"Si.BC.ToolboxBookContent": "^Material Densities:^Copper:8.96 g/cm3^Iron: 7.87 g/cm3^Gold: 19.32 g/cm3^Iridium: 22.56 g/cm3",
+	"Si.BC.FableBookName": "Fairys, Junimos, and other Fables",
+	"Si.BC.FableBookDesc": "Book description here",
+	"Si.BC.FableBookContent": "Book contents here",
 	"Si.BC.FernBookName": "Fern Island Travel Brochure",
 	"Si.BC.FernBookDesc": "A trip does sound nice.",
 	"Si.BC.FernBookContent": "^^Scuba diving, dolphin watching, and incredible photographic opportunities of the Ginger Island Volcano await! Book your relaxing cruise along the Fern Islands today!",
@@ -86,15 +110,30 @@
 	"Si.BC.FireproofingBookName": "Fireproofing Your Workshop",
 	"Si.BC.FireproofingBookDesc": "There's a warning on the back that the book itself isn't fireproof.",
 	"Si.BC.FireproofingBookContent": "^^Regularly clean your workshop, removing flammable materials such as wood shavings or dust, to minimize the impact of rogue embers.",
+	"Si.BC.FerngillFishBookName": "Fish of Ferngill",
+	"Si.BC.FerngillFishBookDesc": "Book description here",
+	"Si.BC.FerngillFishBookContent": "Book contents here",
+	"Si.BC.DanceBookName": "Flailing With Purpose: A Modern Approach To The Art Of Dance",
+	"Si.BC.DanceBookDesc": "Book description here",
+	"Si.BC.DanceBookContent": "Book contents here",
+	"Si.BC.TeaBookName": "The Gift of Tea",
+	"Si.BC.TeaBookDesc": "Book description here",
+	"Si.BC.TeaBookContent": "Book contents here",
 	"Si.BC.GridballBookName": "Gridball Rulebook",
 	"Si.BC.GridballBookDesc": "Huh, you've always wondered how that game was played.",
 	"Si.BC.GridballBookContent": "^^If a member of the opposing team is holding the ball but choosing to remain stationary inside the midfield, your team is allowed to call 'Rubber Duck', rush to your team's side of the field, and begin performing the Macarena as outlined in section 8 paragraph 3C.",
+	"Si.BC.RadioBookName": "Ground-To-Air Radio Protocol",
+	"Si.BC.RadioBookDesc": "Book description here",
+	"Si.BC.RadioBookContent": "Book contents here",
 	"Si.BC.GoldBookName": "Guide to Goldsmithing",
 	"Si.BC.GoldBookDesc": "For hobby and profit.",
 	"Si.BC.GoldBookContent": "^^Abrasive materials can tarnish a gold's natural luster due to its softness. Instead, use a soft cloth or toothbrush, and dip in a mixture of warm water and mild dish soap for best results.",
 	"Si.BC.CleanSpellsBookName": "Housekeeping Charms & Spells",
 	"Si.BC.CleanSpellsBookDesc": "The illustrations on the cover appear to be animated.",
 	"Si.BC.CleanSpellsBookContent": "^^Socks charmed to fold themselves may become confused and wind up paired with other socks than the ones they came with. To rectify this, ensure every pair of socks you own has a bright, unique pattern.",
+	"Si.BC.OverbearingBookName": "How To Deal With Overbearing People",
+	"Si.BC.OverbearingBookDesc": "Book description here",
+	"Si.BC.OverbearingBookContent": "Book contents here",
 	"Si.BC.GuineaBookName": "How to Train your Guinea Pig",
 	"Si.BC.GuineaBookDesc": "The one on the cover is so cute!",
 	"Si.BC.GuineaBookContent": "^^Slowly move the treat in a circle, allowing the guinea pig to follow the treat around. Once you've completed a few circles, say 'Circle!' with a positive tone and give the treat to the guinea pig.",
@@ -110,15 +149,30 @@
 	"Si.BC.BusBookName": "Lessons in Bus Driving",
 	"Si.BC.BusBookDesc": "It looks like this book was accompanied by a video series, but the CD is missing.",
 	"Si.BC.BusBookContent": "^^Always make sure to check your rear-view mirrors. Even after you've done that, keep your eyes and ears peeled for horns, shouting, and other indications of something behind you. A bus has many blind spots you may be unaware of.",
+	"Si.BC.LandBookName": "Living Off The Land: A Practical Guide",
+	"Si.BC.LandBookDesc": "Book description here",
+	"Si.BC.LandBookContent": "Book contents here",
+	"Si.BC.PulmonaryBookName": "The Lone Ranger Of Pulmonary Hypertension",
+	"Si.BC.PulmonaryBookDesc": "Book description here",
+	"Si.BC.PulmonaryBookContent": "Book contents here",
 	"Si.BC.HomeownerBookName": "Maintenance for First-Time Homeowners",
 	"Si.BC.HomeownerBookDesc": "Tips and tricks for keeping your house in one piece!",
 	"Si.BC.HomeownerBookContent": "^^Personal protective equipment for fireplace maintenance should include the following: a dust mask, safety goggles, work gloves, a long-sleeved shirt, pants, and footwear.",
+	"Si.BC.CastleBookName": "Marcie And The Underground Castle",
+	"Si.BC.CastleBookDesc": "Book description here",
+	"Si.BC.CastleBookContent": "Book contents here",
 	"Si.BC.MarketArtBookName": "Marketing Art",
 	"Si.BC.MarketArtBookDesc": "Recommended by Lupini himself!",
 	"Si.BC.MarketArtBookContent": "^^Always keep your audience at the focus of your marketing. Give them space to interpret the meaning of your artwork. By encouraging them to develop that interpretation, they become more likely to purchase the work for further reflection.",
 	"Si.BC.MarnieLogBookName": "Marnie's Logbook",
 	"Si.BC.MarnieLogBookDesc": "There's details about every animal on the farm in here!",
 	"Si.BC.MarnieLogBookContent": "^^Summer Stats:^Cows 9 | Goats 3 | Sheep 2^Chickens 14 | Ducks 7 | Rabbits 4",
+	"Si.BC.SecondMarriageBookName": "Maximizing Your Second Marriage",
+	"Si.BC.SecondMarriageBookDesc": "Book description here",
+	"Si.BC.SecondMarriageBookContent": "Book contents here",
+	"Si.BC.MusclesBookName": "Mega Muscles Magazine",
+	"Si.BC.MusclesBookDesc": "Book description here",
+	"Si.BC.MusclesBookContent": "Book contents here",
 	"Si.BC.PennyBookName": "The Mystery of Firebrook Manor",
 	"Si.BC.PennyBookDesc": "Young reporter Eliana stumbles across an unsolved case from a century ago and sets out to make a name for herself. Little does she know what lies in store...",
 	"Si.BC.PennyBookContent": "^^Eliana jumped at the sudden sound of creaking plaster and turning gears. Looking back, she saw the grates of the fireplace now open, and a newly-formed set of steps behind them. Letting go of the vase, which clicked back into place, she hesitantly peered down the stairs into the darkness.",
@@ -128,9 +182,15 @@
 	"Si.BC.NavBookName": "Ocean Navigation Quick Reference",
 	"Si.BC.NavBookDesc": "The pages are rather damp.",
 	"Si.BC.NavBookContent": "^^When facing towards the front of the boat (known as the 'bow'), on your left is the 'port' side and on your right is the 'starboard' side. Behind you is the 'stern'. 'Windward' is the direction the wind is coming from, while 'leeward' is the direction the wind is headed to.",
+	"Si.BC.TeenagerBookName": "Parenting 101: Surviving The Teenage Years",
+	"Si.BC.TeenagerBookDesc": "Book description here",
+	"Si.BC.TeenagerBookContent": "Book contents here",
 	"Si.BC.PHBBookName": "Player's Handbook",
 	"Si.BC.PHBBookDesc": "A handbook for players of a tabletop game.",
 	"Si.BC.PHBBookContent": "^^Your Ability Score determines how good your character is at each of the core abilities: Strength, Dexterity, Constitution, Charisma, Intelligence, and Wisdom. Having a higher score in an ability will give you higher bonuses to skills associated with that ability. For example, a high Charisma will boost your Persuasion skill.",
+	"Si.BC.StepdadBookName": "Practical Tips For First-Time Step-Dads",
+	"Si.BC.StepdadBookDesc": "Book description here",
+	"Si.BC.StepdadBookContent": "Book contents here",
 	"Si.BC.PrincessBookName": "The Princess and the Sword",
 	"Si.BC.PrincessBookDesc": "A book written for children aged 4 and up.",
 	"Si.BC.PrincessBookContent": "^^Amy took the sword. 'Thank you, Miss Dragon. I will take good care of it.'^Miss Dragon smiled at Amy. 'You are welcome Princess Amy. Now you are ready to fight the evil Prince and save the kingdom.",
@@ -140,6 +200,9 @@
 	"Si.BC.ElliotPlanetBookName": "The Rise and Fall of Planet Yazzo",
 	"Si.BC.ElliotPlanetBookDesc": "This was written by Elliott!",
 	"Si.BC.ElliotPlanetBookContent": "^Chapter One^^Commander Yutkin stepped through the golden archway as the airlock snapped shut behind him. Today was his first day on Planet Yazzo, and all 14 of the alliance delegates had been summoned to the Grand Spire.",
+	"Si.BC.SolarionBookName": "The Solarion Chronicles",
+	"Si.BC.SolarionBookDesc": "Book description here",
+	"Si.BC.SolarionBookContent": "Book contents here",
 	"Si.BC.StyleBookName": "Super Fashion Girl Magazine",
 	"Si.BC.StyleBookDesc": "Looks like a clothing magazine.",
 	"Si.BC.StyleBookContent": "^^This season is all about scarves! A well-draped scarf will boost your confidence in any context. Try a half bow knot on a silk scarf for a classy look, or drape it over your shoulders for a fun night out!",
@@ -149,9 +212,18 @@
 	"Si.BC.ChimneyBookName": "A Tale of Two Chimneys",
 	"Si.BC.ChimneyBookDesc": "Ella's first interaction with her new neighbor blossoms into something she never thought she'd find. But is it enough to overcome what's ahead?",
 	"Si.BC.ChimneyBookContent": "^^She pressed her forehead into Ella's and tangled their fingers together. 'Don't worry! We'll pull through.'^Ella smiled back, but it wasn't enough to mask the concern in her eyes.^'Just be careful, love.'",
+	"Si.BC.SecondGradeBookName": "Teacher's Guidebook: 2nd Grade",
+	"Si.BC.SecondGradeBookDesc": "Book description here",
+	"Si.BC.SecondGradeBookContent": "Book contents here",
+	"Si.BC.UFOBookName": "UFO Mysteries",
+	"Si.BC.UFOBookDesc": "Book description here",
+	"Si.BC.UFOBookContent": "Book contents here",
 	"Si.BC.SoldierBookName": "Welcome Home: A Soldier's Guide to Returning to Civilian Life",
 	"Si.BC.SoldierBookDesc": "Strategies for adjusting to being back home.",
 	"Si.BC.SoldierBookContent": "^^Your family members may have difficulty understanding what you've gone through, but it's important to remember that they love you and want to help you however they can. When there's something you need, like a boundary or some space, be clear and upfront with them about it.",
+	"Si.BC.StopJojaBookName": "Why JojaCo Must Be Stopped",
+	"Si.BC.StopJojaBookDesc": "Book description here",
+	"Si.BC.StopJojaBookContent": "Book contents here",
 	// Gift dialogue
 	"Si.BC.Abigail.book": "Thanks! Looks like an interesting book.",
 	"Si.BC.Abigail.adventure": "I like pretending to be the adventurer in these books.#$b#What choices would I make?#$b#How would I react?#$b#That sort of thing.",
@@ -172,7 +244,7 @@
 	"Si.BC.Maru.scifi": "It's fun to read others' ideas of how technology will develop in the future. Thanks @!",
 	"Si.BC.Maru.space": "I've always loved learning about space. Something about the vast cosmos just calls to me.",
 	"Si.BC.Sebastian.book": "Huh, a new book. I'll give it a shot.",
-	"Si.BC.Sebastian.game": "Great, I can use this for game night.",
+	"Si.BC.Sebastian.dnd": "Great, I can use this for game night.",
 	"Si.BC.Demetrius.book": "A new book! Why thank you @.",
 	"Si.BC.Demetrius.science": "Fascinating!",
 	"Si.BC.Demetrius.culture": "I find books like these very helpful when it comes to understanding the world. Thank you @.",
@@ -183,7 +255,7 @@
 	"Si.BC.Robin.Wood": "I'm familiar with most techniques already, but maybe this book will teach me something new. You never know!",
 	"Si.BC.Sam.book": "Huh, I guess I can give this book a shot.",
 	"Si.BC.Sam.adventure": "Sweet, this looks exciting!#$b#Heroes in these books are always about saving the day and looking cool.#$b#I guess they're kind of like role models.$10",
-	"Si.BC.Sam.game": "Great! I can really use this for game night.#$b#I always forget my copies.$10",
+	"Si.BC.Sam.dnd": "Great! I can really use this for game night.#$b#I always forget my copies.$10",
 	"Si.BC.Sam.scifi": "Sweet, this looks exciting!#$b#I like imagining that books like this are actually biographies sent from the future.#$b#Is that weird?$10",
 	"Si.BC.Sam.comic": "Awesome, I can't wait to read this issue!",
 	"Si.BC.Vincent.book": "Huh, this book has lots of words but no pictures.",
