--- a/[Si] Book Collecting/i18n/default.json
+++ b/[Si] Book Collecting/i18n/default.json
@@ -23,6 +23,9 @@
 	"Si.BC.SaltBookName": "101 Gourmand Tomato Salt Recipes",
 	"Si.BC.SaltBookDesc": "The pictures on the cover make the book itself look delicious!",
 	"Si.BC.SaltBookContent": "^^Once you've spread the spoon of cottage cheese evenly over your slice of toasted sourdough, sprinkle a few pinches of tomato salt on top and enjoy.",
+	"Si.BC.SonataBookName": "11 Solo Sonatas For The Wooden Flute",
+	"Si.BC.SonataBookDesc": "Book description here",
+	"Si.BC.SonataBookContent": "",
 	"Si.BC.NeuralBookName": "Advanced Neural Networks",
 	"Si.BC.NeuralBookDesc": "Book description here",
 	"Si.BC.NeuralBookContent": "Book contents here",
@@ -77,6 +80,9 @@
 	"Si.BC.CrystalBookName": "Crystallic Symbolism",
 	"Si.BC.CrystalBookDesc": "The meanings of various gems and minerals.",
 	"Si.BC.CrystalBookContent": "^^Aquamarines symbolize tranquility and courage. Their soothing properties can relieve stress and fear, leaving behind a sense of peace.",
+	"Si.BC.WitchBookBookName": "Curse The Countryside! A Spellbook For The Rural Witch",
+	"Si.BC.WitchBookBookDesc": "Book description here",
+	"Si.BC.WitchBookBookContent": "Book contents here",
 	"Si.BC.CoalminerBookName": "The Dark Blue Life: A Coal-miner's Memoir",
 	"Si.BC.CoalminerBookDesc": "Book description here",
 	"Si.BC.CoalminerBookContent": "Book contents here",
