Fixed witchbookbook, tweaked SVE positions, added 1 per day book to seedshop, workong on desc nd excerpts for new books

--- a/[Si] Book Collecting/i18n/default.json
+++ b/[Si] Book Collecting/i18n/default.json
@@ -24,7 +24,7 @@
 	"Si.BC.SaltBookDesc": "The pictures on the cover make the book itself look delicious!",
 	"Si.BC.SaltBookContent": "^^Once you've spread the spoon of cottage cheese evenly over your slice of toasted sourdough, sprinkle a few pinches of tomato salt on top and enjoy.",
 	"Si.BC.SonataBookName": "11 Solo Sonatas For The Wooden Flute",
-	"Si.BC.SonataBookDesc": "Book description here",
+	"Si.BC.SonataBookDesc": "There are some nice songs in here.",
 	"Si.BC.SonataBookContent": "",
 	"Si.BC.NeuralBookName": "Advanced Neural Networks",
 	"Si.BC.NeuralBookDesc": "Book description here",
@@ -80,9 +80,9 @@
 	"Si.BC.CrystalBookName": "Crystallic Symbolism",
 	"Si.BC.CrystalBookDesc": "The meanings of various gems and minerals.",
 	"Si.BC.CrystalBookContent": "^^Aquamarines symbolize tranquility and courage. Their soothing properties can relieve stress and fear, leaving behind a sense of peace.",
-	"Si.BC.WitchBookBookName": "Curse The Countryside! A Spellbook For The Rural Witch",
-	"Si.BC.WitchBookBookDesc": "Book description here",
-	"Si.BC.WitchBookBookContent": "Book contents here",
+	"Si.BC.WitchBookName": "Curse The Countryside! A Spellbook For The Rural Witch",
+	"Si.BC.WitchBookDesc": "Book description here",
+	"Si.BC.WitchBookContent": "Book contents here",
 	"Si.BC.CoalminerBookName": "The Dark Blue Life: A Coal-miner's Memoir",
 	"Si.BC.CoalminerBookDesc": "Book description here",
 	"Si.BC.CoalminerBookContent": "Book contents here",
