Added more gift tastes and dialogue

--- a/[Si] Book Collecting/i18n/default.json
+++ b/[Si] Book Collecting/i18n/default.json
@@ -237,7 +237,7 @@
 	"Si.BC.Abigail.mystery": "I like to think I'd be the survivor in these books.#$b#But I'd probably get killed first for being so genre-savvy.$1",
 	"Si.BC.Abigail.guild": "This should help me with my training!",
 	"Si.BC.Abigail.music": "I've been playing the flute ever since I was little.#$b#Used to keep my parents up all night!$1#$b#That's why I got in the habit of practicing outside.#$e#The drums were a more recent instrument of mine.#$b#I don't think they liked that much better...$1",
-	"Si.BC.Abigail.Bookkeeping": "Ugh, my parents keep trying to get me to read this...",
+	"Si.BC.Abigail.business": "Ugh, my parents keep trying to get me to read books like these...$2#$b#I'm just not interested in all that, you know?",
 	"Si.BC.Abigail.Guinea": "I've been trying to teach David some tricks, but all he cares about is the treat.",
 	"Si.BC.Caroline.book": "Oh, a new book! Thank you @.",
 	"Si.BC.Caroline.travel": "Oh, the places I could go...",
@@ -245,7 +245,7 @@
 	"Si.BC.Caroline.Tea": "You're welcome to join me in my sunroom for more tea anytime, @!$1",
 	"Si.BC.Pierre.book": "Huh, a new book! Could be useful.",
 	"Si.BC.Pierre.guide": "It's always helpful to pick up new skills.",
-	"Si.BC.Pierre.Bookkeeping": "I've been trying to get Abigail to read this. It's so applicable to stores like ours!",
+	"Si.BC.Pierre.business": "I've been trying to get Abigail to read books like these. They're so applicable to stores like ours!",
 	"Si.BC.Maru.UFO": "I do hope there's life out there, but most UFO stories I've heard haven't been very convincing to me so far.",
 	"Si.BC.Maru.book": "Nice, a new book!",
 	"Si.BC.Maru.medical": "This will be helpful at the clinic.",
@@ -293,6 +293,7 @@
 	"Si.BC.Jas.book": "Thank you for the book!",
 	"Si.BC.Jas.kid": "Wow, this book looks like fun! I might do my next book report on it!",
 	"Si.BC.Jas.nature": "Wow, the pictures look so pretty!",
+	"Si.BC.Jas.animal": "Aww, the animals look so cute!",
 	"Si.BC.Jas.Princess": "I wanna be just like Princess Amy when I grow up!",
 	"Si.BC.Shane.book": "Thanks for the book, I guess.",
 	"Si.BC.Shane.sport": "Cool, thanks.",
@@ -344,6 +345,7 @@
 	"Si.BC.Haley.book": "I guess it would be nice to have some new reading material. Thanks.",
 	"Si.BC.Haley.romance": "A lot of these romance books are pretty similar, but I'm always looking for something fresh.",
 	"Si.BC.Haley.fashion": "Hmm, I should incorporate that into my look.#$e#What do you think @?",
+	"Si.BC.Haley.photo": "Since I got into photography I haven't seen the world the same way.#$b#Different angles can give a scene an entirely different meaning!$1",
 	"Si.BC.Haley.NatGeo": "The photography is stunning! I'm so glad they included the camera specs!",
 	"Si.BC.Haley.Cloak": "I've never seen fashion like this before.#$b#Wonder if I can start a new trend?",
 	"Si.BC.Haley.Darkroom": "This'll be helpful with my darkroom! Thanks @.",
@@ -364,6 +366,7 @@
 	"Si.BC.Lewis.ReadersDigest": "I swear they've been making these for over a century now, but they still never get old!",
 	"Si.BC.Lewis.Gold": "W-why would you give this to me?$2#$b#Not that I know anything about it, of course...$3",
 	"Si.BC.Clint.book": "Books are good, but I usually like to learn on the job.",
+	"Si.BC.Clint.craft": "Reading's no substitute for experience, but I'll see if I can pick anything up from this book. Thanks.",
 	"Si.BC.Clint.Fireproofing": "Useful book, that one.",
 	"Si.BC.Clint.Toolbox": "Useful book, that one.",
 	"Si.BC.Clint.Arch": "Decent book, that one.",
@@ -373,6 +376,7 @@
 	"Si.BC.Leah.MarketArt": "This could help me get my art out there. Thanks!",
 	"Si.BC.Leah.Wood": "There's some nice techniques in here.",
 	"Si.BC.Leah.nature": "I love reading books like these. Thanks @!",
+	"Si.BC.Leah.art": "Books are cool, but art really helps me express myself.#$b#I think it's due to the physicality, and the abstract not being limited by language.#$e#Thanks @.",
 	"Si.BC.Willy.UFO": "You know, I've seen a lotta interesting things out on the sea. Wouldn't surprise me if there's interesting things out in the sky too.",
 	"Si.BC.Willy.book": "Fair winds, calm seas, and a good book are all you need.",
 	"Si.BC.Willy.travel": "A boat 'n a good compass'll get you anywhere you want to go.",
