Some SVE bf sched tweaks and added gift dialogue

--- a/[Si] Book Collecting/i18n/default.json
+++ b/[Si] Book Collecting/i18n/default.json
@@ -329,6 +329,7 @@
 	"Si.BC.Penny.nature": "This might be a good prompt to hold a lesson outdoors on a nice day.",
 	"Si.BC.Penny.fantasy": "I love the fantastical worlds these books come up with.#$b#They're so ideallic and cozy.#$b#What I would give to live there!",
 	"Si.BC.Penny.kid": "This will be perfect for my lessons!",
+	"Si.BC.Penny.SecondGrade": "This will really help with my lessons!",
 	"Si.BC.Pam.book": "Thanks kid.",
 	"Si.BC.Pam.selfhelp": "Uh, thanks kid. Who knows, maybe it'll help me out.",
 	"Si.BC.Pam.adventure": "Now this looks like a fun time!",
