--- a/[Si] Book Collecting/i18n/default.json
+++ b/[Si] Book Collecting/i18n/default.json
@@ -82,7 +82,7 @@
 	"Si.BC.CrystalBookContent": "^^Aquamarines symbolize tranquility and courage. Their soothing properties can relieve stress and fear, leaving behind a sense of peace.",
 	"Si.BC.WitchBookName": "Curse The Countryside! A Spellbook For The Rural Witch",
 	"Si.BC.WitchBookDesc": "You can read the instructions, but most of the incantations are in a language you don't know.",
-	"Si.BC.WitchBookContent": "The Toe-Stubbing Spell^Spell Components: one cup splinters of various woods; one freshly cut toenail from the target; one tablespoon slime; two fresh onions, roughly chopped^Spell Preperation: lightly slather each of the splinters and the toenail in slime and set aside to dry. Arrange the onion pieces into a circle wide enough to fit your hand (nails included). Once dried, sprinkle the splinters and toenail into the circle, place your hand upon them, and speak the incantation on the following page.",
+	"Si.BC.WitchBookContent": "^The Toe-Stubbing Spell^^Spell Components:^ONE CUP splinters of various woods^ONE freshly cut toenail from the target^ONE TABLESPOON slime^TWO fresh onions, roughly chopped^^^^Spell Preperation: lightly slather each of the splinters and the toenail in slime and set aside to dry. Arrange the onion pieces into a circle wide enough to fit your hand (nails included). Once dried, sprinkle the splinters and toenail into the circle, place your hand upon them, and speak the incantation on the following page.",
 	"Si.BC.CoalminerBookName": "The Dark Blue Life: A Coal-miner's Memoir",
 	"Si.BC.CoalminerBookDesc": "There's a canary on the back of the book.",
 	"Si.BC.CoalminerBookContent": "^^We couldn't tell how long we were in there. One of the lads started making marks every time he woke up from sleeping. Said his schedule was like clockwork. I think he made around ten marks. When they finally got the boulder outta the way, we found out we'd been down there two weeks.",
@@ -148,7 +148,7 @@
 	"Si.BC.Human101BookContent": "^^When a human bares their teeth, they are not trying to intimidate. Instead, the baring of teeth indicates friendliness and approachability, especially when accompanied by the upturning of their mouth corners, and an extended appendage. The appendage is related to an act known as a 'handshake', which will be covered in the next chapter.",
 	"Si.BC.HumanLingoBookName": "Human Language",
 	"Si.BC.HumanLingoBookDesc": "It sure is detailed.",
-	"Si.BC.HumanLingoBookContent": "^^Similar examples of modern slang can be seen in the following phrases:^LOL: Laughing Out Loud^BRB: Be Right Back^IDK: I Don't Know",
+	"Si.BC.HumanLingoBookContent": "^^Similar examples of modern slang can be seen in the following phrases:^^LOL: Laughing Out Loud^^BRB: Be Right Back^^IDK: I Don't Know",
 	"Si.BC.FlowerLingoBookName": "The Language of Flowers",
 	"Si.BC.FlowerLingoBookDesc": "There's a few flowers pressed between the pages.",
 	"Si.BC.FlowerLingoBookContent": "^^The crocus symbolizes cheerfulness, youthfulness, and the awakening of spring from winter.",
