Added helpful comments and tweaked some gift dialogue

--- a/[Si] Book Collecting/i18n/default.json
+++ b/[Si] Book Collecting/i18n/default.json
@@ -259,7 +259,7 @@
 	"Si.BC.Demetrius.book": "A new book! Why thank you @.",
 	"Si.BC.Demetrius.science": "Fascinating!",
 	"Si.BC.Demetrius.culture": "I find books like these very helpful when it comes to understanding the world. Thank you @.",
-	"Si.BC.Demetrius.fiction": "I don't enjoy books like this one, but I appreciate you thinking of me @.#$b#I'll see if one of the kids would like it.",
+	"Si.BC.Demetrius.fiction": "I don't enjoy fiction books like this one, but I appreciate you thinking of me @.#$b#I'll see if one of the kids would like it.",
 	"Si.BC.Robin.book": "Thanks! Looks like an interesting read.",
 	"Si.BC.Robin.sport": "You know, I loved playing team sports when I was younger.#$e#I wonder if Alex would be interested in starting a local rec league?",
 	"Si.BC.Robin.scifi": "Oh I could never turn down a good science fiction novel. Thanks @!",
@@ -305,7 +305,7 @@
 	"Si.BC.Marnie.MarnieLog": "Oh, I must have left that lying around! Thank you @.",
 	"Si.BC.Marnie.Gold": "Oh, I know exactly who this belongs to.",
 	"Si.BC.Alex.book": "Uh, thanks! I'll see if I get around to reading it.",
-	"Si.BC.Alex.sport": "Hey, this is pretty useful! Thanks!",
+	"Si.BC.Alex.sport": "I've always loved being physically active.#%b#Something about getting my blood pumping and my skin sweating just makes me feel more alive, you know?",
 	"Si.BC.Evelyn.book": "Oh how nice, thank you dear!#$e#Now where did I put my reading glasses...",
 	"Si.BC.Evelyn.recipe": "Oh these look quite scrumptious, I'll be sure to whip you up a plate!",
 	"Si.BC.Evelyn.nature": "How wonderful, thank you dear.",
